test/corpus/atoms.txt
=====
Atoms
=====
1
hello
'hello
'*
'-
"hello\nnew line!"
"non-äscii"
"invalid escape: \I\ö"
"hi ; not a comment"
"\0\a\b\t\n\v\f\r\e\s\"\\\d"
\#a
\# note-the-space!
\#ö
[\#\0 \#\a \#\b \#\t \#\n \#\v \#\f \#\r \#\e \#\s \#\" \#\\ \#\d]
\#\I
\#\ö
-------
(program
    (number)
    (symbol)
    (quote (symbol))
    (quote (symbol))
    (quote (symbol))
    (string (string_fragment) (escape_sequence) (string_fragment))
    (string (string_fragment))
    (string (string_fragment) (invalid_escape_sequence) (invalid_escape_sequence))
    (string (string_fragment))
    (string
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence))
    (character (character_fragment))
    (character (character_fragment)) (symbol)
    (character (invalid_character_fragment))
    (byte_array
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence))
        (character (escape_sequence)))
    (character (invalid_escape_sequence))
    (character (invalid_escape_sequence))
    )
