test/corpus/directive.txt
===========
Directive
===========
@const-start
@const-end
 @const-start
;@const-start
(hello "world@const-start")
(send "hello@world.com")
-----
(program
    (directive)
    (directive)
    (directive)
    (comment)
    (application (symbol) (string (string_fragment)))
    (application (symbol) (string (string_fragment))))
