test/corpus/functions.txt
=========
Functions
=========
(defun greet (msg) (print "hello" msg))
(fn (msg) msg)
(lambda (msg) msg)
(closure (msg) msg my-environment)
(def test 1)
(define a 1)
------

(program
    (function_definition 
        name: (symbol)
        args: (arglist (symbol))
        body: (application
            function: (symbol) 
            arg: (string (string_fragment))
            arg: (symbol)))
    (function
        args: (arglist (symbol))
        body: (symbol))
    (function
        args: (arglist (symbol))
        body: (symbol))
    (closure
        args: (arglist (symbol))
        body: (symbol)
        environment: (symbol))
    
    (definition name: (symbol) value: (number))
    (definition name: (symbol) value: (number)))
